Add documentation for publish talk route
